# authit

./: .env  .gitignore  .ignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile
.helix/: languages.toml
.sqlx/: query-0449855fb602ef2401e1d5140a1aeb274755143c2bdfffa8a6eb8ef8ef654a3a.json  query-256775d678d4a564ff1b2694661e6b5e2207c5f42797ac9464f48a3fa871bdf6.json  query-39a021ae719c340b18e3051b43c5380dbe1ead523f75579b20b7a6aae82183a7.json  query-4bd58d9c008c0ca99f9ee1e7752a3363fa08f29ae1368a6897fb05807d5423ab.json  query-6dc74a33d96e6a19ee040c054fad4bfadd73b0f1fb572b9e0ca43846e52f3526.json  query-7779213b9784f1614a72d4788bc822d15ccc0cf56c7fc80e0c99c65103a6686c.json  query-850930caec28719eeef5ec0490f7e3786512e64c66281e01619f6cc65f36c58e.json  query-9bad2509a39d93f998eb4f6683679d003849df0b1f7d0312d7a0f76453d31403.json  query-a4a291395c0e1d266e037ba6a03ba3f7b6ddac679fcf363dc462e5ec2c097689.json  query-a95250f0ce448112312780b50b476f88d609d450bc3595e43053aa9558c16e36.json  query-b4ce3ec14a65cd245c7c55bad8b2a52f380de2fb0fdee06c282fe7b5be32d629.json  query-cdd52b57d29bbbaa8508ff94aebd2ab5c0dd28e3197523f09bc263cf69f74f8d.json
api/: Cargo.toml
api/src/: lib.rs
migrations/: 20251228011122_create_provision_links.sql  20251228042716_create_sessions.sql  20251228203456_add_provision_link_groups.sql
nix/: module.nix
server/: Cargo.toml
server/src/: auth_routes.rs  config.rs  kanidm.rs  lib.rs  storage.rs  user_data.rs  uuid_v7.rs
server/src/storage/: provision_link.rs  session.rs
types/: Cargo.toml
types/src/: error.rs  kanidm.rs  lib.rs  provision.rs  reset_link.rs  session.rs
ui/: Cargo.toml
web/: Cargo.toml
web/assets/: main.css
web/src/: auth_routes.rs  main.rs
web/src/views/: components.rs  dashboard.rs  login.rs  mod.rs  provision.rs  users.rs
