[workspace]
resolver = "2"
members  = ["ui", "web", "api", "server", "types"]

[workspace.dependencies]
dioxus = { version = "0.7.2" }

# Workspace
ui     = { path = "ui" }
api    = { path = "api" }
server = { path = "server" }
types  = { path = "types" }

# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
secrecy = { version = "0.10", features = ["serde"] }
base64 = "0.22"
jiff = { version = "0.2", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["serde"] }
redb = "3"
postcard = { version = "1", features = ["alloc"] }

# Server-only
axum = { version = "0.8" }
tokio = { version = "1", features = ["full"] }
oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
cookie = "0.18"
tracing = "0.1"
url = "2"
