[workspace]
resolver = "2"
members  = ["ui", "web", "api", "server", "types"]

[workspace.dependencies]
dioxus = { version = "0.7.2" }

# Workspace
ui     = { path = "ui" }
api    = { path = "api" }
server = { path = "server" }
types  = { path = "types" }

axum       = { version = "0.8" }
base64     = "0.22"
cookie     = "0.18"
hmac       = "0.12"
jiff       = { version = "0.2", features = ["serde"] }
oauth2     = "5"
postcard   = { version = "1", features = ["alloc"] }
redb       = "3"
reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
secrecy    = { version = "0.10", features = ["serde"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha2       = "0.10"
tokio      = { version = "1", features = ["full"] }
tracing    = "0.1"
url        = "2"
uuid       = { version = "1", features = ["serde"] }
