[workspace]
members = ["ui", "web", "api", "server", "types"]
resolver = "2"

[workspace.dependencies]
dioxus = { version = "0.7.2" }

# Workspace
api = { path = "api" }
server = { path = "server" }
types = { path = "types" }
ui = { path = "ui" }

base64 = "0.22"
jiff = { version = "0.2", features = ["serde"] }
postcard = { version = "1", features = ["alloc"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
uuid = { version = "1", features = ["serde"] }
