[package]
name    = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus               = { workspace = true, features = ["fullstack"] }
types.workspace      = true
uuid.workspace       = true
serde_json.workspace = true

# Server-only
server = { workspace = true, optional = true }

[features]
server = ["dioxus/server", "types/server", "dep:server"]
