[package]
edition = "2024"
name = "api"
version = "0.1.0"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
serde_json.workspace = true
types.workspace = true
uuid.workspace = true

# Server-only
server = { workspace = true, optional = true }

[features]
server = ["dioxus/server", "types/server", "dep:server"]
