[package]
name    = "types"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow               = { version = "1", features = ["backtrace"] }
dioxus.workspace     = true
base64.workspace     = true
jiff.workspace       = true
secrecy.workspace    = true
serde.workspace      = true
serde_json.workspace = true
url.workspace        = true
uuid.workspace       = true

[features]
server = ["dioxus/server"]
