[package]
edition = "2024"
name = "types"
version = "0.1.0"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
dioxus.workspace = true
jiff.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
uuid.workspace = true

[features]
server = ["dioxus/server"]
