[package]
edition = "2024"
name = "web"
version = "0.1.0"

[dependencies]
api = { workspace = true }
dioxus = { workspace = true, features = ["router", "fullstack"] }
jiff.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
types = { workspace = true }
ui = { workspace = true }
uuid.workspace = true

server = { workspace = true, optional = true }

[features]
default = []
server = ["dioxus/server", "ui/server", "api/server", "types/server", "dep:server"]
web = ["dioxus/web"]
