[package]
edition = "2024"
name = "web"
version = "0.1.0"

[dependencies]
api = { workspace = true }
dioxus = { workspace = true, features = ["router", "fullstack"] }
jiff.workspace = true
types = { workspace = true }
uuid.workspace = true
wasm-bindgen = "=0.2.105"

server = { workspace = true, optional = true }

[features]
default = []
server = ["dioxus/server", "api/server", "types/server", "dep:server"]
web = ["dioxus/web"]
